# easyofd-rs

./: .gitignore  Cargo.toml  README.md
crates/easyofd/: Cargo.toml
crates/easyofd-convert/: Cargo.toml
crates/easyofd-convert/src/: lib.rs
crates/easyofd-core/: Cargo.toml
crates/easyofd-core/src/: error.rs  lib.rs  model.rs  ofd_model.rs
crates/easyofd-derive/: Cargo.toml
crates/easyofd-derive-impl/: Cargo.toml
crates/easyofd-derive-impl/src/: lib.rs
crates/easyofd-derive/src/: lib.rs
crates/easyofd-reader/: Cargo.toml
crates/easyofd-reader/src/: lib.rs
crates/easyofd-signature/: Cargo.toml
crates/easyofd-signature/src/: lib.rs
crates/easyofd-template/: Cargo.toml
crates/easyofd-template/src/: lib.rs
crates/easyofd-writer/: Cargo.toml
crates/easyofd-writer/src/: lib.rs
crates/easyofd/src/: lib.rs
crates/easyofd/tests/: compile_fail.rs  derive_model.rs
crates/easyofd/tests/compile_fail/: derive_enum.rs  derive_enum.stderr  derive_out_of_range_float.rs  derive_out_of_range_float.stderr  derive_tuple.rs  derive_tuple.stderr  derive_unknown_kind.rs  derive_unknown_kind.stderr
docs/: architecture.md  usage-guide.md
