[package]
name = "easyofd-convert"
description = "PDF ↔ OFD bidirectional conversion for easyofd-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
easyofd-core = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
