[package]
name = "easyofd-derive-impl"
description = "Implementation logic for the #[derive(OfdModel)] proc macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
easyofd-core = { workspace = true }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
