[package]
name = "easyofd-derive"
description = "Derive macros for easyofd-rs (#[derive(OfdModel)])"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
