[package]
name = "easyofd-derive"
description = "Derive macros for easyofd-rust (#[derive(OfdModel)])"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
easyofd-derive-impl = { workspace = true }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
