[package]
name = "easyofd-template"
description = "OFD template engine for easyofd-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
easyofd-core = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
easyofd-reader = { workspace = true }
easyofd-writer = { workspace = true }

[lints]
workspace = true
