[package]
name = "easyofd-writer"
description = "OFD file writer for easyofd-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
easyofd-core = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }

[lints]
workspace = true
